--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="">
+                <a href="https://github.com/jhihyawang/AIOT-YOLOv8_DishDetect">
                     <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" alt="GitHub"
                         width="30" height="30">
                 </a>
